# Haroo

./: CMakeLists.txt
.github/workflows/: standalone.yml  style.yml
documentation/: CMakeLists.txt  conf.py
include/haroo/: haroo.h
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
